# socket-demos

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cd-release.yml  ci.yml
_codeql_build_dir/: Makefile
_codeql_build_dir/linux/01_blocking_sync/: Makefile  linux01_client  linux01_server
_codeql_build_dir/linux/02_nonblocking_select_sync/: Makefile  linux02_client  linux02_server
_codeql_build_dir/linux/03_epoll/: Makefile  linux03_client  linux03_server
_codeql_build_dir/tests/: Makefile
_codeql_build_dir/tests/unit/: Makefile  test_placeholder
cmake/: README.md
docs/: architecture.md  protocol.md  verification.md
linux/01_blocking_sync/: CMakeLists.txt  README.md  client.c  server.c
linux/02_nonblocking_select_sync/: CMakeLists.txt  README.md  client.c  server.c
linux/03_epoll/: CMakeLists.txt  README.md  client.c  server.c
linux/common/: sock_helpers.h
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  README.md  test_echo_integration.c
tests/unit/: CMakeLists.txt  test_echo_helpers.c  test_placeholder.c
windows/01_blocking_sync/: CMakeLists.txt  README.md  client.c  server.c
windows/02_nonblocking_select_sync/: CMakeLists.txt  README.md  client.c  server.c
windows/03_iocp_async/: CMakeLists.txt  README.md  client.c  server.c
windows/common/: winsock_helpers.h
